app/assets/stylesheets/test_taking.scss
header.secondary {
  padding: {
    left: 0.5em;
    right: 0.5em;
  };
  background-color: #92A8D1;

  display: flex;
  justify-content: space-between;
}

.test-taking {

  .action-button {
    background-color: #92A8D1;
    border: none;
    color: white;
    font-size: 1.5em;
    border-radius: 0.1em;
    padding: 0.5em 0.75em;
    text-decoration: none;
    text-align: center;
    appearance: none;
    -webkit-appearance: none;
    margin: auto;
    width: 90%;
    align-self: center;
  }

  display: flex;
  flex-flow: row wrap;
  padding: 1em;

  @media (max-width: 30em) {
    padding: 0.2em;
  }

  .top {
    text-align: center;
    flex: 3 1 20em;

    img {
      max-width: 100%;
      height: auto;
    }
  }
  .edit_question, .bottom {
    display: flex;
    max-width: 89vw;
    margin: auto;
    align-self: center;
    flex-flow: column nowrap;
    justify-content: space-around;
    flex: 1 1 20em;

    .input-item {
      input, select {
        font-size: 2em;
        width: 100%;
        max-width: 84vw;

        @media (max-width: 30em) {
          font-size: 1.5em;
        }
      }
    }
  }
}

.correct {
  color: green;
}
.wrong {
  color: red;
}

